fix form to be align with card

--- a/app/assets/stylesheets/components/_pro_form.scss
+++ b/app/assets/stylesheets/components/_pro_form.scss
@@ -14,6 +14,7 @@ color: white;
   border-radius: 8px;
   background-color: #383535bf;
   color: white;
+  display: flex;
 }
 
 .form-control::-webkit-input-placeholder {
